fix footer on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,7 +34,7 @@ body {
 
 .footer,
 .push {
-  height: 24.75rem; }
+  height: 80%; }
 
 .mainContent--row {
   background-image: url("/images/lightblue-bg.jpg");
@@ -50,53 +50,40 @@ body {
       font-size: 1.35rem;
       text-shadow: 0px 3px 20px #F58300; }
 
+@media screen and (min-width: 992px) {
+  .footer,
+  .push {
+    height: 24.75rem; } }
+
 .phoneNumber {
   position: fixed;
   right: 0;
   z-index: 9;
   top: 27.938rem;
-  min-height: 22.188rem;
   width: 6.375rem;
   max-width: 6.375rem;
-  padding: 1.938rem 0;
+  padding: 1.3rem;
   border-radius: 5px;
   background-color: #0081A7;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center; }
   .phoneNumber--icon {
-    position: absolute;
-    z-index: 10;
-    bottom: 1.938rem;
-    width: 3.5rem;
-    height: 4rem; }
-  .phoneNumber--phone {
-    position: relative;
-    top: 5.938rem;
-    z-index: 10;
-    font-family: "Lora", serif;
-    font-size: 2.5rem;
-    line-height: 3.188rem;
-    color: #ffffff;
-    transform: rotate(-90deg);
-    margin-bottom: 2rem; }
-    .phoneNumber--phone:hover {
-      color: #ffffff; }
+    width: 4.5rem;
+    height: 5rem; }
 
 .navbar {
-  height: 7.5rem;
-  padding: 1.5rem 1.063rem;
+  height: 5rem;
   background-color: #ffffff; }
   .navbar--toggle {
     position: relative;
     z-index: 10;
-    top: -4rem; }
+    top: 1rem; }
   .navbar--brand {
     position: relative;
-    width: 11.25rem;
-    height: 11.25rem;
-    top: 1.8rem; }
+    width: 8rem;
+    height: 8rem;
+    top: 0.2rem; }
     .navbar--brand--img {
       position: absolute;
       width: 100%;
@@ -111,8 +98,25 @@ body {
       color: #000000 !important; }
   .navbar #menu-bar {
     z-index: 12;
-    top: -4rem;
+    width: 100%;
+    display: none;
+    top: orem;
     background-color: #ffffff; }
+  @media screen and (min-width: 992px) {
+    .navbar {
+      height: 7.5rem;
+      padding: 1.5rem 1.063rem;
+      background-color: #ffffff; }
+      .navbar--brand {
+        position: relative;
+        width: 11.25rem;
+        height: 11.25rem;
+        top: 1.8rem; }
+        .navbar--brand--img {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          z-index: 10; } }
 
 .galleryItem {
   display: flex;
