--- a/scss/client/_layout.scss
+++ b/scss/client/_layout.scss
@@ -13,7 +13,7 @@ body {
 
 .footer,
 .push {
-    height: 24.75rem;
+    height: 80%;
 }
 
 .mainContent--row {
@@ -30,5 +30,12 @@ body {
             font-size: 1.35rem;
             text-shadow: 0px 3px 20px $darkorange;
         }
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .footer,
+    .push {
+        height: 24.75rem;
     }
 }
